<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryLight"
                android:gravity="center"
                android:paddingBottom="16dp"
                android:paddingLeft="8dp"
                android:paddingEnd="56dp"
                android:paddingRight="56dp"
                android:paddingTop="16dp"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/favourite_button"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Mission Impossible"
                android:paddingStart="8dp" />

            <ToggleButton
                android:id="@+id/favourite_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:background="@color/colorPrimaryLight"
                android:padding="32dp"
                app:layout_constraintBottom_toBottomOf="@+id/title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/detail_poster"
                android:layout_width="173dp"
                android:layout_height="260dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/movie_poster_detail_cd"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_margin="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimaryLight"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/overview" />

            <View
                android:id="@+id/divider1"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_margin="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimaryLight"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detail_poster" />

            <TextView
                android:id="@+id/overview_title"
                style="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/plot_summary"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider1" />

            <TextView
                android:id="@+id/overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/overview_title" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/layout_bg"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.6"
                app:layout_constraintStart_toEndOf="@+id/detail_poster"
                app:layout_constraintTop_toTopOf="@+id/detail_poster">

                <TextView
                    android:id="@+id/release_date_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="8dp"
                    android:text="@string/release_date_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/detail_poster"
                    app:layout_constraintTop_toTopOf="@+id/detail_poster" />

                <TextView
                    android:id="@+id/release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:textAlignment="center"
                    android:textColor="@color/colorBackground"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/detail_poster"
                    app:layout_constraintTop_toBottomOf="@+id/release_date_title" />


                <TextView
                    android:id="@+id/rating_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:text="@string/rating_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/detail_poster"
                    app:layout_constraintTop_toBottomOf="@+id/release_date" />

                <TextView
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingBottom="8dp"
                    android:textAlignment="center"
                    android:textColor="@color/colorBackground"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/detail_poster"
                    app:layout_constraintTop_toBottomOf="@+id/rating_title" />

            </LinearLayout>

            <TextView
                android:id="@+id/trailer_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/trailer"
                android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
                android:textColor="@android:color/black"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/detail_poster"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <ImageView
                android:id="@+id/trailer1Button"
                android:layout_width="168dp"
                android:layout_height="92dp"
                android:layout_gravity="center"
                android:contentDescription="@string/trailer_button_content_description"
                android:onClick="launchYoutubeTrailerIntent"
                app:layout_constraintEnd_toEndOf="@+id/linearLayout"
                app:layout_constraintHorizontal_bias="0.507"
                app:layout_constraintStart_toStartOf="@+id/linearLayout"
                app:layout_constraintTop_toBottomOf="@+id/trailer_title" />

            <TextView
                android:id="@+id/reviews_title"
                style="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/review_title"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider" />


            <com.borjabravo.readmoretextview.ReadMoreTextView
                android:id="@+id/reviews"
                android:layout_width="0dp"
                app:trimExpandedText="@string/expanded_text"
                app:trimCollapsedText="@string/collapsed_text"
                app:trimMode="trimModeLength"
                app:trimLength="100"
                app:colorClickableText="@color/colorPrimaryLight"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reviews_title" />

            <TextView
                android:id="@+id/no_reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_reviews"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reviews_title" />


        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>
